actually now done student application process

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -56,7 +56,7 @@
 
         <p class="mt-8 text-center text-sm text-gray-600">
             {% trans "Don't have an account?" %}
-            <a href="{% url 'account_signup' %}" class="font-medium text-primary-green hover:text-dark-green">{% trans "Sign Up" %}</a>
+            <a href="{% url 'account_signup_choice' %}" class="font-medium text-primary-green hover:text-dark-green">{% trans "Sign Up" %}</a>
         </p>
     </div>
 </div>
